--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BienestarBovino">
         <activity
+            android:name=".MenuActivity"
+            android:exported="false" />
+        <activity
             android:name=".PurchaseActivity"
             android:exported="false" />
         <activity
