Se arreglan transiciones y prueba de BD

--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.bienestarbovino">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,10 +13,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BienestarBovino">
         <activity
-            android:name=".MenuActivity"
+            android:name=".InventoryActivity"
             android:exported="false" />
         <activity
             android:name=".PurchaseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VaccineActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MenuVetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MenuActivity"
             android:exported="false" />
         <activity
             android:name=".SaleActivity"
