--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BienestarBovino">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name=".InfoBovinoActivity"
             android:exported="false" />
@@ -43,9 +43,6 @@
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity2"
-            android:exported="false" />
-        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
@@ -53,7 +50,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
