Se agrega el menú de control reproductivo
Se agrega el menú de control reproductivo con las transiciones, y el inicio de las pantallas de estado reproductivo

--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
+            android:name=".ControlReproductivoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EstadoReproductivoActivity"
+            android:exported="false" />
+        <activity
             android:name=".InfoBovinoActivity"
             android:exported="false" />
         <activity
@@ -50,6 +56,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
