Primera version de Gestacion
Primera version de la pantalla gestación

--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
+            android:name=".GestacionActivity"
+            android:exported="false" />
+        <activity
             android:name=".ControlReproductivoActivity"
             android:exported="false" />
         <activity
