Primera versón de parto
Version del estado parto, haciendo falta únicamente asociarlo con los spinners

--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MenuTest">
         <activity
+            android:name=".PartoActivity"
+            android:exported="false" />
+        <activity
             android:name=".GestacionActivity"
             android:exported="false" />
         <activity
