Primera version de informe de produccion

--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MenuTest">
         <activity
+            android:name=".InformeProduccionActivity"
+            android:exported="false" />
+        <activity
             android:name=".AbortoActivity"
             android:exported="false" />
         <activity
