Cambio de interfaz de menu
Se agregaron funcionalidades de informes ventas y productos, asi de personal + tareas... todo con sus imagenes caracteristicos del APP

--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -66,6 +66,12 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".MenuInformesActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".MenuPersonalActivity"
+            android:exported="true"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
