--- a/BienestarBovino/app/build.gradle
+++ b/BienestarBovino/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
 
+
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -40,4 +41,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
