--- a/BienestarBovino/app/src/main/AndroidManifest.xml
+++ b/BienestarBovino/app/src/main/AndroidManifest.xml
@@ -75,6 +75,9 @@
             android:name=".MenuPersonalActivity"
             android:exported="true"/>
         <activity
+            android:name=".InformeVentasActivity"
+            android:exported="true"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
